<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/detail_animation_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/detail_loader"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loader" />


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/detail_no_internet"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/no_internet" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/detail_failed_data_load"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/failed_load_data" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        app:title="@string/app_name"
                        app:titleTextColor="@color/black" />
                </com.google.android.material.appbar.AppBarLayout>


                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/profile_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_bar" />

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_image"
                    app:layout_constraintTop_toTopOf="@+id/detail_image"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/username"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/detail_name"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/detail_name" />

                <TextView
                    android:id="@+id/detail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:lines="2"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="@string/bio"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/detail_image" />

                <TextView
                    android:id="@+id/detail_company"
                    style="@style/TextDetailUser"
                    android:text="@string/company"
                    app:drawableStartCompat="@drawable/ic_office_building"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/detail_bio" />

                <TextView
                    android:id="@+id/detail_location"
                    style="@style/TextDetailUser"
                    android:text="@string/location"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/detail_company" />

                <TextView
                    android:id="@+id/detail_blog"
                    style="@style/TextDetailUser"
                    android:text="@string/blog"
                    app:drawableStartCompat="@drawable/ic_link"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@+id/detail_location" />

                <TextView
                    android:id="@+id/detail_followers_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="4dp"
                    android:text="@string/followers_value"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@id/detail_blog" />

                <TextView
                    android:id="@+id/detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_followers_value"
                    app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                <TextView
                    android:id="@+id/detail_following_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:drawablePadding="4dp"
                    android:text="@string/following_value"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_baseline_dot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_followers"
                    app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                <TextView
                    android:id="@+id/detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="4dp"
                    android:text="@string/following"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_following_value"
                    app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                <TextView
                    android:id="@+id/detail_repo_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawablePadding="4dp"
                    android:text="@string/repository_value"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_repo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_image"
                    app:layout_constraintTop_toBottomOf="@id/detail_followers_value" />

                <TextView
                    android:id="@+id/detail_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/repository"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_repo_value"
                    app:layout_constraintTop_toBottomOf="@+id/detail_followers_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/primaryColor"
                android:contentDescription="@string/tabs"
                app:tabTextColor="@color/secondaryTextColor" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryDarkColor" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>